<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".TelaCadastroRacoes">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_tela_cadastro_racoes_marca" />

    <EditText
        android:id="@+id/editTextTelaCadstroRacoesMarca"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_quantidade" />

    <EditText
        android:id="@+id/editTextTelaCadastroRacoesQuantidade"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_tipo" />

    <Spinner
        android:id="@+id/spinnerTelcCadastroRacoesTipo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/activity_tela_cadastro_racoes_tipo_lista" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_porte" />

    <Spinner
        android:id="@+id/spinnerTelaCadastroRacoesPorte"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/activity_tela_cadastro_racoes_porte_lista" />

    <Button
        android:id="@+id/buttonTelaCadastroRacoesSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_tela_cadastro_racoes_salvar"
        app:toggleCheckedStateOnClick="false" />
</LinearLayout>